@@ -1,6 +1,7 @@
 0.5.0
 -----
 
+* Results of common column operations are now cached using a common memoize decorator. (#162)
 * Deprecated support for Python version 3.2.
 * Added support for Python wheel packaging. (#127)
 * Add PercentileRank computation and usage example to cookbook. (#152)
